<resources>
    <string name="app_name">Random Menu Picker</string>
    <string name="openDrawer"></string>
    <string name="closeDrawer"></string>
    <string name="randomEmptyMenu">No Menu Available</string>
    <string name="sort_option_label">Sort by: </string>


<!--    fragment home-->
    <string name="fragment_home_tv_text">Makan Apa \n Hari Ini?</string>
    <string name="fragment_home_btn_text">aku tidak tau</string>
    <string name="fragment_home_random_label">Mungkin kamu mau:</string>
    <string name="fragment_home_tv_click_hint">Klik nama menu untuk melihat lebih lanjut</string>


<!--    fragment cari-->
    <string name="tv_keyword_text">Mau cari makanan apa ?</string>
    <string name="et_keyword_text">contoh : nasi goreng</string>
    <string name="cari_btn_text">Cari</string>


    <!--    fragment menu-->
    <string name="search_result_label">Hasil pencarian untuk\u0020</string>
    <string name="menu_not_found">Tidak ada menu yang ditemukan</string>


<!--    fragment menu detail deskripsi-->
    <string name="deskripsi_tag_label_text">Tag : </string>
    <string name="deskripsi_bahan_label_text">Bahan : </string>

<!--    fragment menu detail resto-->
    <string name="resto_label_text">Tersedia di restoran :</string>

<!--    Tab Layout tabs-->
    <string name="tab_desc_text">Deskripsi</string>
    <string name="tab_langkah_text">Langkah Memasak</string>
    <string name="tab_resto_text">Restoran</string>

<!--    fragment menu detail edit-->
    <string name="edit_nama_label">Nama</string>
    <string name="edit_desc_label">Deskripsi</string>
    <string name="edit_tag_label">Tag</string>
    <string name="edit_bahan_label">Bahan</string>
    <string name="edit_langkah_label">Langkah</string>
    <string name="edit_resto_label">Tersedia di restoran</string>
    <string name="btn_save_text">save</string>
    <string name="btn_discard_text">discard</string>
    <string name="tag_input_hint">Bila ada lebih dari 1 tag, pisahkan dengan ;</string>
    <string name="bahan_input_hint">Bila ada lebih dari 1 bahan, pisahkan dengan ;</string>
    <string name="langkah_input_hint">Bila ada lebih dari 1 langkah, pisahkan dengan ;</string>
    <string name="resto_input_hint">Bila ada lebih dari 1 nama restoran, pisahkan dengan ;</string>

<!--    fragment setting-->
    <string name="tv_cooldown_text">Cooldown</string>
    <string name="tv_cooldown_hint">Banyak pemilihan makanan lainnya sebelum makanan yang sama dapat dipilih lagi</string>
    <string name="tv_history_text">Search History</string>
    <string name="btn_clear_text">clear search history</string>
    <string name="tv_menu_text">Menu</string>
    <string name="btn_delete_menu_text">delete all menu</string>


    <string-array name="spinner_kategori">
        <item>Nama</item>
        <item>Deskripsi</item>
        <item>Tag</item>
        <item>Bahan</item>
        <item>Restoran</item>
    </string-array>

    <string-array name="sort_option">
        <item>A - Z</item>
        <item>Z - A</item>
        <item>Terbaru - Terlama</item>
        <item>Terlama - Terbaru</item>
    </string-array>
</resources>