<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_cari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_keyword_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        />

    <EditText
        android:id="@+id/et_keyword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_cari"
        android:background="@drawable/edit_text_border"
        android:layout_margin="15dp"
        android:hint="@string/et_keyword_text"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:maxLength="40"
        />

    <Button
        android:id="@+id/btn_cari"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/cari_btn_text"
        android:layout_below="@+id/et_keyword"
        android:layout_alignEnd="@+id/et_keyword"
        android:background="@drawable/rounded_corner"
        android:textColor="@color/colorWhite"
        />

    <Spinner
        android:id="@+id/spinner_kategori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_keyword"
        android:layout_alignStart="@+id/et_keyword"
        android:layout_marginTop="15dp"
        />
</RelativeLayout>