<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_desc_text" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_langkah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_langkah_text" />


            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_resto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_resto_text" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_edit_24"
        android:backgroundTint="@color/colorOrange"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/trash_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:backgroundTint="@color/colorRed"
            />

</androidx.coordinatorlayout.widget.CoordinatorLayout>



